# TrackingMod

./: CMakeLists.txt
CoordinateGenerator/: CMakeLists.txt  Visualize.cpp
CoordinateGenerator/inc/: Coordinates.h  MostCollinear.h
CoordinateGenerator/src/: Coordinates.cpp  MostCollinear.cpp
CoordinateGenerator/test/: TestCollinear.cpp  TestCoordinates.cpp
TemplatizedInterface/inc/: LinesAngle.h  Properties.h  Scintillator.h  ScintillatorPlane.h  Statistics.h  Update.h
TemplatizedInterface/src/: LinesAngle.cpp  ScintillatorPlane.cpp  Statistics.cpp
TemplatizedInterface/test/: Debug.cpp  Efficiency.cpp  EfficiencyTest.cpp  StripTest.cpp  TestCoordinateTransformation.cpp  TestTree.cpp  TestTrgPlane.cpp  TestValidation.cpp.new  TestValidationV2.cpp  TestValidationV3.cpp  TwoDPattern.cpp  lienordni.cpp
TemplatizedInterface/test/core/: TestValidationV3.cpp
test/: CMakeLists.txt  ScintPattern.cpp  Timing.cpp
visualizer/TGeo/: Visualizer.cpp  Visualizer.h
